--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -4,6 +4,6 @@
         <title>Test.1.1</title>
     </head>
     <body>
-        <h2>Hello Word!</h2>
+        <h1 style=" color: blue;">Hello Word!</h1>
     </body>
 </html>
