--- a/belajar p.html
+++ b/belajar p.html
@@ -4,7 +4,7 @@
         <title>belajar pake p</title>
     </head>
     <body>
-        ini baris 1
-        ini baris 2
+        <p>ini baris 1</p>
+        <p>ini baris 2</p>
     </body>
 </html>
