--- a/belajar p.html
+++ b/belajar p.html
@@ -4,7 +4,7 @@
         <title>belajar pake p</title>
     </head>
     <body>
-        <p>ini baris 1</p>
-        <p>ini baris 2</p>
+        <h1>ini baris 1</h1>
+        <h1>ini baris 2</h1>
     </body>
 </html>
